[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/settings_menu.tscn" id="2_settings"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PausePanel" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1

[node name="IPLabel" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "IP: 127.0.0.1"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="BackToLobbyButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Back to Lobby"

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsMenu" parent="." instance=ExtResource("2_settings")]
visible = false

[connection signal="pressed" from="PausePanel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/BackToLobbyButton" to="." method="_on_back_to_lobby_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]

